<resources>
    <string name="app_name">Portfolio</string>

    <string name="my_apps">My Nano Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spotify_streamer_text">Spotify Streamer</string>
    <string name="btn_scores_app_text">Scores App</string>
    <string name="btn_library_app_text">Library App</string>
    <string name="btn_build_it_bigger_app_text">Build It Bigger</string>
    <string name="btn_reader_app_text">Bacon Reader</string>
    <string name="btn_my_own_app_text">My Own App</string>
</resources>
