<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_material_light">

    <TextView android:text="@string/my_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/main_activity_title"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify_streamer_text"
        android:id="@+id/buttonSpotify"
        android:layout_marginTop="26dp"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_below="@+id/main_activity_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores_app_text"
        android:id="@+id/buttonScores"
        android:layout_marginTop="20dp"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_below="@+id/buttonSpotify"
        android:layout_alignLeft="@+id/buttonSpotify"
        android:layout_alignStart="@+id/buttonSpotify"
        android:layout_alignRight="@+id/buttonSpotify"
        android:layout_alignEnd="@+id/buttonSpotify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_library_app_text"
        android:id="@+id/buttonLibrary"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_below="@+id/buttonScores"
        android:layout_alignLeft="@+id/buttonScores"
        android:layout_alignStart="@+id/buttonScores"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/buttonScores"
        android:layout_alignEnd="@+id/buttonScores" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger_app_text"
        android:id="@+id/buttonBuildItBigger"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/buttonLibrary"
        android:layout_alignLeft="@+id/buttonLibrary"
        android:layout_alignStart="@+id/buttonLibrary"
        android:layout_alignRight="@+id/buttonLibrary"
        android:layout_alignEnd="@+id/buttonLibrary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reader_app_text"
        android:id="@+id/buttonReader"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_below="@+id/buttonBuildItBigger"
        android:layout_alignLeft="@+id/buttonBuildItBigger"
        android:layout_alignStart="@+id/buttonBuildItBigger"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/buttonBuildItBigger"
        android:layout_alignEnd="@+id/buttonBuildItBigger" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_own_app_text"
        android:id="@+id/buttonMyApp"
        android:background="@color/udacious"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:onClick="onLaunchClick"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/buttonReader"
        android:layout_alignLeft="@+id/buttonReader"
        android:layout_alignStart="@+id/buttonReader"
        android:layout_alignRight="@+id/buttonReader"
        android:layout_alignEnd="@+id/buttonReader"
        android:clickable="true" />

</RelativeLayout>
